# cactus-makes-perfect

./: .env.example  .gitignore  Dockerfile  README.md  package-lock.json  package.json
apps/admin/: AdminDashboard.tsx  App.tsx  BulkActions.tsx  GuestSidebar.tsx  Login.tsx  index.html  main.tsx  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
apps/admin/api/: client.ts
apps/admin/components/: AddGuestModal.tsx  AddGuestSuccessModal.tsx  AddUnitModal.tsx  AssignToUnitModal.tsx  DeployGuestModal.tsx  GroupCreateModal.tsx  GroupEditModal.tsx  GuestList.tsx  HydrateLocationModal.tsx  LodgingManager.tsx  ManageUnitModal.tsx  SendCommunicationModal.tsx
apps/admin/hooks/: useSelection.tsx
apps/admin/src/: index.css
apps/admin/utils/: renderInviteTemplate.ts
apps/api/: Dockerfile  pyproject.toml
apps/api/app/: main.py
apps/api/app/core/: security.py
apps/api/app/db/: schema.sql
apps/api/app/v1/: auth.py  rsvps.py
apps/backend/: Dockerfile  package-lock.json  package.json  server.js
apps/frontend/: Dockerfile  Dockerfile.frontend  index.html  nginx.conf  nginx.conf.template  package-lock.json  package.json  server.js  tailwind.config.js  vite.config.ts
apps/frontend/src/: TheArtifact.tsx  fonts.css  index.css  main.tsx  vite-env.d.ts
apps/frontend/src/components/: AmbientSound.tsx  Modal.tsx
apps/frontend/src/constants/: themes.ts
apps/frontend/src/hooks/: useUFOState.ts
apps/frontend/src/pages/: AccessDenied.tsx
apps/frontend/src/routes/: ProtectedRoute.tsx
infra/: Dockerfile.api  railway.json
(+23 files in other folders)
