[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cactus-makes-perfect-api"
version = "0.1.0"
description = "FastAPI backend for Cactus Makes Perfect guest portal"
authors = [
    { name = "Cactus Makes Perfect Team", email = "team@cactusmakesperfect.org" }
]
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.6",
    "pydantic==2.9.2",
    "python-jose[cryptography]==3.3.0",
    "sqlalchemy==2.0.36",
    "psycopg2-binary==2.9.9",
    "alembic==1.13.2"
]

[tool.setuptools.packages.find]
where = ["app"]
